# amplifier-mod-example-template

./: Makefile  README.md  pyproject.toml
src/amplifier_mod_example_template/: __init__.py
tests/: test_template.py
