[project]
name = "amplifier-mod-example-template"
version = "0.1.0"
description = "Reference template module demonstrating how to build Amplifier extensions"
readme = "README.md"
authors = [
    { name = "Brian Krabach", email = "brkrabac@microsoft.com" }
]
requires-python = ">=3.11"
dependencies = [
    "amplifier-core @ file:///home/brkrabac/repos/amplifier-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
